@@ -1,3 +1,10 @@
+2006-11-05  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/i386/sysconf.c (intel_check_word):
+	Update handling of cache descriptor 0x49 for new models.
+	* sysdeps/unix/sysv/linux/x86_64/sysconf.c (intel_check_word):
+	Likewise.
+
 2006-11-02  Jakub Jelinek  <jakub@redhat.com>
 
 	* malloc/memusage.c (dest): Reset not_me back to false after
